--- a/index.html
+++ b/index.html
@@ -57,16 +57,125 @@
       <main class="main">
          <!--==================== HOME ====================-->
          <section class="home section" id="home">
+            <div class="home__container container grid">
+                <img src="assets/img/home-perfil.png" alt="image" class="home__img">
 
+                <div class="home__data">
+                    <h1 class="home__name">Chelo <br> Paesani</h1>
+                    <h3 class="home__profession">Computer Science</h3>
+                </div>
+
+                <a href="#work" class="home__scroll">
+                    <div class="home_scroll-box">
+                        <i class="ri-arrow-down-line"></i>
+                    </div>
+
+                    <span class="home_scroll-text">Recent Works</span>
+                </a>
+            </div>
          </section>
 
          <!--==================== WORKS ====================-->
          <section class="work section" id="work">
+            <h2 class="section__title">RECENT WORKS</h2>
 
+            <div class="work__container container grid">
+                <article class="work__card">
+                    <a href="#" target="_blank" class="work__link">
+                        <h2 class="work__title">Nothing</h2>
+                        <p class="work__description">
+                            Non existent description, We will see in a few months.
+                        </p>
+
+                        <img src="assets/img/work-1.jpg" alt="image" class="work__img">
+
+                        <i class="ri-arrow-right-line"></i>
+                    </a>
+                </article>
+
+                <article class="work__card">
+                    <a href="#" target="_blank" class="work__link">
+                        <h2 class="work__title">Nothing V2</h2>
+                        <p class="work__description">
+                            Non existent description, We will see in a few months.
+                        </p>
+
+                        <img src="assets/img/work-2.jpg" alt="image" class="work__img">
+
+                        <i class="ri-arrow-right-line"></i>
+                    </a>
+                </article>
+
+                <article class="work__card">
+                    <a href="#" target="_blank" class="work__link">
+                        <h2 class="work__title">Nothing V2.1</h2>
+                        <p class="work__description">
+                            Non existent description, We will see in a few months.
+                        </p>
+
+                        <img src="assets/img/work-3.jpg" alt="image" class="work__img">
+
+                        <i class="ri-arrow-right-line"></i>
+                    </a>
+                </article>
+
+                <article class="work__card">
+                    <a href="#" target="_blank" class="work__link">
+                        <h2 class="work__title">Nothing__Drupal</h2>
+                        <p class="work__description">
+                            Non existent description, We will see in a few months.
+                        </p>
+
+                        <img src="assets/img/work-4.jpg" alt="image" class="work__img">
+
+                        <i class="ri-arrow-right-line"></i>
+                    </a>
+                </article>
+
+                <article class="work__card">
+                    <a href="#" target="_blank" class="work__link">
+                        <h2 class="work__title">Nothing__CD/CI</h2>
+                        <p class="work__description">
+                            Non existent description, We will see in a few months.
+                        </p>
+
+                        <img src="assets/img/work-5.jpg" alt="image" class="work__img">
+
+                        <i class="ri-arrow-right-line"></i>
+                    </a>
+                </article>
+            </div>
          </section>
 
          <!--==================== INFO ====================-->
          <section class="info section" id="info">
+            <h2 class="section__title">MY INFO</h2>
+
+            <div class="info__container container grid">
+                <!-- ABOUT -->
+                 <div class="about grid">
+                    <div class="about__content">
+                        <h3 class="info__title">About Me</h3>
+                        <p class="about__description">
+                            My description when i want to put it because right now im too tired to do it.
+                        </p>
+
+                        <a href="assets/pdf/CVMarceloPaesani2024.pdf" download="" target="_blank" class="button about__button"></a>
+                    </div>
+
+                    <img src="assets/img/home-perfil.png" alt="image" class="about__img">
+                 </div>
+
+                <!-- EXPERIENCE -->
+                <div class="experience">
+                    
+                </div>
+
+                <!-- SKILLS -->
+                <div class="skills">
+                    
+                </div>
+            </div>
 
          </section>
 
